[gd_scene load_steps=2 format=3 uid="uid://auto_sell_receipt_modal"]

[ext_resource type="Script" path="res://Scripts/UI/auto_sell_receipt_modal.gd" id="1_script"]

[node name="AutoSellReceiptModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.282353, 0.721569, 0.658824, 1)
theme_override_font_sizes/font_size = 32
text = "DELIVERY RECEIPT"
horizontal_alignment = 1

[node name="Line" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.282353, 0.721569, 0.658824, 0.4)

[node name="TotalEarnedLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "earnings : 0$"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
theme_override_font_sizes/font_size = 14
text = "Auto-sold items from recent transit:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Line2" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(1, 1, 1, 0.1)

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "DISMISS"
